--- a/packages/eyes-selenium-3/package.json
+++ b/packages/eyes-selenium-3/package.json
@@ -63,6 +63,7 @@
     "selenium-webdriver": "< 4.0.0"
   },
   "scripts": {
+    "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "npm run test:unit && npm run test:e2e",
     "test:e2e": "npm run test:selenium",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.js\"",
