--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -48,7 +48,9 @@
     "mocha-parallel-tests": "^2.2.2",
     "node-fetch": "^2.6.0",
     "shared-examples-for": "^0.1.3",
-    "spec-xunit-file": "0.0.1-3"
+    "spec-xunit-file": "0.0.1-3",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1"
   },
   "engines": {
     "node": ">=8.9.0"
