--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -35,6 +35,7 @@
     "@applitools/dom-utils": "4.7.17",
     "@applitools/eyes-sdk-core": "10.2.0",
     "@applitools/visual-grid-client": "14.1.0",
+    "@applitools/bitmap-commons": "1.0.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "webdriverio": "^5.18.6"
   },
