--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -48,7 +48,7 @@
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^80.0.0",
+    "chromedriver": "latest",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mocha": "^6.2.2",
