--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -48,12 +48,14 @@
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^80.0.0",
+    "chromedriver": "^83.0.0",
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
+    "mock-require": "^3.0.3",
     "nock": "^12.0.3",
     "node-fetch": "^2.6.0",
-    "selenium-webdriver": "^4.0.0-alpha.5",
+    "selenium-webdriver-3": "npm:selenium-webdriver@^3.6.0",
+    "selenium-webdriver-4": "npm:selenium-webdriver@^4.0.0-alpha.5",
     "spec-xunit-file": "0.0.1-3",
     "yargs": "^15.3.1"
   },
@@ -65,7 +67,7 @@
     "test": "yarn test:unit && yarn test:it",
     "render": "node scripts/render.js",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
+    "test:it": "mocha-parallel-tests --timeout 120000 -r ./test/util/resolve-version.js test/it/**/*.spec.js",
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
     "coverage:sandbox": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report --send-report prod",
