--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -51,7 +51,7 @@
     "chromedriver": "^83.0.0",
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
-    "mock-require": "^3.0.3",
+    "module-alias": "^2.2.2",
     "nock": "^12.0.3",
     "node-fetch": "^2.6.0",
     "selenium-webdriver-3": "npm:selenium-webdriver@^3.6.0",
@@ -66,13 +66,14 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "test": "yarn test:unit && yarn test:it",
     "render": "node scripts/render.js",
-    "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
-    "test:it": "mocha-parallel-tests --timeout 120000 -r ./test/util/resolve-version.js test/it/**/*.spec.js",
-    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
-    "coverage:sandbox": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report",
-    "coverage:prod": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
-    "test:coverage:custom": "mocha --no-timeouts \"test/coverage/custom/*.spec.js\"",
+    "coverage:generate": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE",
+    "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
+    "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
+    "test:unit": "mocha -r ./test/util/version-alias.js test/unit/**/*.spec.js",
+    "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 test/it/**/*.spec.js",
+    "test:e2e": "mocha -r ./test/util/version-alias.js --no-timeouts test/e2e/**/*.spec.js",
+    "test:coverage": "env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
+    "test:coverage:custom": "mocha -r ./test/util/version-alias.js --no-timeouts test/coverage/custom/*.spec.js",
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
