--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -70,7 +70,7 @@
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:unit": "mocha -r ./test/util/version-alias.js test/unit/**/*.spec.js",
-    "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 test/it/**/*.spec.js",
+    "test:it": "mocha-parallel-tests -r ./test/util/version-alias.js --timeout 120000 test/it/**.spec.js",
     "test:e2e": "mocha -r ./test/util/version-alias.js --no-timeouts test/e2e/**/*.spec.js",
     "test:coverage": "env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
     "test:coverage:custom": "mocha -r ./test/util/version-alias.js --no-timeouts test/coverage/custom/*.spec.js",
