--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -28,7 +28,10 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "chromedriver83": "npm:chromedriver@83.0.0",
+    "chromedriver81": "npm:chromedriver@81.0.0",
+    "chromedriver80": "npm:chromedriver@80.0.0"
   },
   "devDependencies": {}
 }
