--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -38,13 +38,13 @@
     "webdriverio": "^5.18.6"
   },
   "devDependencies": {
+    "@applitools/sdk-shared": "0.1.0",
     "@applitools/sdk-coverage-tests": "1.0.0",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
     "axios": "^0.19.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^80.0.0",
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
     "mocha": "^6.2.2",
