--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -12,8 +12,8 @@
     "test:it": "mocha --no-timeouts \"test/it/**/*.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
     "coverage:generate": "coverage-tests create-tests --remote=http://localhost:4444/wd/hub",
-    "coverage:sandbox": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report",
-    "coverage:prod": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report --send-report prod",
+    "coverage:sandbox": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE && yarn test:coverage && coverage-tests process-report",
+    "coverage:prod": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-4' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
     "test:coverage:custom": "mocha --no-timeouts ./test/coverage/custom/*.js",
     "preversion": "bongo preversion && yarn coverage:prod",
