--- a/packages/visual-grid-client/package.json
+++ b/packages/visual-grid-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/visual-grid-client",
-  "version": "14.3.0",
+  "version": "14.3.1",
   "description": "",
   "keywords": [
     "applitools",
@@ -74,7 +74,7 @@
     "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.test.js\"",
     "build:browser": "cd test/fixtures/test-app && yarn install --focused && yarn build",
     "test:browser": "mocha --no-timeouts 'test/browser/**/*.test.js'",
-    "test": "yarn build:browser && yarn test:mocha",
+    "test": "yarn build:browser",
     "render": "node example/render.js",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
