--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -42,7 +42,7 @@
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-coverage-tests": "1.0.0",
-    "chromedriver": "^80.0.0",
+    "chromedriver": "latest",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "eslint": "^6.8.0",
@@ -61,7 +61,7 @@
     "coverage:sandbox": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests --remote=$CVG_TEST_REMOTE && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "yarn start-chromedriver && env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-5' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js; yarn stop-chromedriver",
-    "test:coverage:custom": "mocha \"test/coverage/custom/**/*.spec.js\" --no-timeouts",
+    "test:coverage:custom": "APPLITOOLS_BATCH_ID=$(uuidgen) mocha --max-parallel-tests $TEST_MAX_PARALLEL --no-timeouts \"test/coverage/custom/**/*.spec.js\"",
     "render": "node scripts/render.js",
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
