--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -69,7 +69,7 @@
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
-    "test:coverage:custom": "APPLITOOLS_BATCH_ID=$(uuidgen) mocha-parallel-tests -r ./test/util/version-alias.js --max-parallel 10 --no-timeouts \"test/coverage/custom/**/*.spec.js\"",
+    "test:coverage:custom": "APPLITOOLS_BATCH_ID=$(uuidgen) mocha-parallel-tests -r ./test/util/version-alias.js --max-parallel 10 --no-timeouts \"../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js\"",
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
