--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -51,7 +51,7 @@
     "chromedriver": "^81.0.0",
     "cors": "^2.8.5",
     "mocha": "^7.2.0",
-    "mocha-parallel-tests": "^2.2.2",
+    "mocha-parallel-tests": "^2.3.0",
     "protractor": "^7.0.0",
     "nock": "^12.0.3",
     "node-fetch": "^2.6.0",
@@ -59,18 +59,16 @@
     "yargs": "^15.3.1"
   },
   "peerDependencies": {
-    "protractor": "^7.0.0"
+    "protractor": ">=5.4.4"
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
-    "render": "node scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha --no-timeouts ./test/it/*.spec.js",
+    "test:it": "mocha --timeout 120000 ./test/it/**/*.spec.js",
     "coverage:generate": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-protractor' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 test/coverage/generic/*.spec.js",
-    "test:coverage:custom": "APPLITOOLS_BATCH_ID=$(uuidgen) mocha-parallel-tests --max-parallel 10 --no-timeouts \"test/coverage/custom/**/*.spec.js\"",
+    "test:coverage": "env APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-protractor' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha-parallel-tests --no-timeouts --reporter spec-xunit-file --max-parallel 15 {./test/coverage/generic/*.spec.js,$(find ../sdk-coverage-tests/coverage-tests/custom/** -name '*.spec.js' -not -name '*.native.spec.js')}",
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
