--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -58,15 +58,13 @@
     "yargs": "^15.3.1"
   },
   "peerDependencies": {
-    "selenium-webdriver": "^4.0.0-alpha.5"
+    "selenium-webdriver": ">=3.6.0"
   },
   "scripts": {
-    "declaration:build": "rm -f index.d.ts && tsc -p tsconfig.json",
-    "build:types": "tsc --declaration --declarationDir dist/lib --declarationMap --emitDeclarationOnly",
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha-parallel-tests --timeout 120000 \"test/it/**/*.spec.js\"",
+    "test:it": "mocha-parallel-tests --timeout 120000 ./test/it/**/*.spec.js",
     "coverage:generate": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
