--- a/packages/dom-capture/package.json
+++ b/packages/dom-capture/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/dom-capture",
-  "version": "7.2.1",
+  "version": "7.2.2",
   "main": "index.js",
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
@@ -11,9 +11,9 @@
     "build": "rollup -c rollup.config.js",
     "build:watch": "rollup -c rollup.config.js --watch",
     "surge": "surge test/fixtures applitools-dom-capture-origin-1.surge.sh && surge test/fixtures applitools-dom-capture-origin-2.surge.sh",
-    "preversion": "bongo preversion && yarn build && yarn test",
+    "preversion": "node scripts/pre-version.js && bongo preversion",
     "version": "bongo version",
-    "postversion": "yarn build && bongo postversion --skip-release-notification"
+    "postversion": "node scripts/post-version.js && bongo postversion --skip-release-notification"
   },
   "engines": {
     "node": ">=8.9.0"
