--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -29,7 +29,7 @@
     "release": "(./scripts/deploy.js && node scripts/gh-release.js && yarn release:amo && yarn release:cws);exit 0;",
     "release:amo": "cd build && web-ext-submit",
     "release:cws": "cd build && webstore upload --auto-publish",
-    "preversion": "yarn vv && yarn vc && yarn verify-commits",
+    "preversion": "bongo preversion",
     "version": "node scripts/version.js && git add src/manifest.json && yarn uc && git add CHANGELOG.md"
   },
   "jest": {
