--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -88,10 +88,10 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
-    "@applitools/dom-capture": "7.1.3",
-    "@applitools/dom-snapshot": "^3.0.5",
+    "@applitools/dom-capture": "7.2.4",
+    "@applitools/dom-snapshot": "3.5.2",
     "@applitools/eyes-images": "4.13.0",
-    "@applitools/visual-grid-client": "14.3.1",
+    "@applitools/visual-grid-client": "14.4.3",
     "buffer": "^5.2.1",
     "classnames": "^2.2.5",
     "fuse.js": "^3.3.0",
