--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -64,7 +64,7 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node scripts/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha-parallel-tests --timeout 120000 ./test/it/**/*.spec.js",
+    "test:it": "mocha-parallel-tests --timeout 120000 -r ./test/util/version-alias.js ./test/it/**/*.spec.js",
     "coverage:generate": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
