--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -49,7 +49,6 @@
     "axios": "^0.19.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^83.0.0",
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
     "mocha": "^6.2.2",
@@ -71,9 +70,7 @@
     "render": "node scripts/render.js",
     "preversion": "bongo preversion && yarn coverage:prod",
     "version": "bongo version",
-    "postversion": "bongo postversion",
-    "start-chromedriver": "node scripts/start-chromedriver.js",
-    "stop-chromedriver": "ps ax | grep chromedriver | grep port=4444 | awk '{print $1}' | xargs kill -9"
+    "postversion": "bongo postversion"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
