--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -34,7 +34,7 @@
   "types": "./typings/index.d.ts",
   "dependencies": {
     "@applitools/eyes-sdk-core": "11.5.1",
-    "@applitools/visual-grid-client": "14.6.1"
+    "@applitools/visual-grid-client": "14.6.2"
   },
   "peerDependencies": {
     "webdriverio": ">=5.18.0"
@@ -53,8 +53,14 @@
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^83.0.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-mocha-no-only": "^1.1.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-testcafe": "^0.2.1",
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
+    "prettier": "^2.0.5",
     "shared-examples-for": "^0.1.3",
     "spec-xunit-file": "0.0.1-3",
     "typescript": "^3.9.6",
