--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@applitools/sdk-shared",
-  "private": true,
   "version": "0.1.0",
   "engines": {
     "node": ">=10.0.0"
@@ -26,12 +25,24 @@
   },
   "dependencies": {
     "@applitools/functional-commons": "1.5.4",
+    "chromedriver": "^83.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "chromedriver": "^83.0.0",
     "yargs": "^15.3.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chalk": "^4.1.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-mocha-no-only": "^1.1.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-testcafe": "^0.2.1",
+    "js-yaml": "^3.13.1",
+    "open": "^7.0.3",
+    "prettier": "^1.18.2",
+    "semver": "^7.3.2"
+  }
 }
