--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -48,7 +48,7 @@
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "chromedriver": "^83.0.0",
+    "chromedriver": "^84.0.0",
     "mocha": "^8.0.1",
     "module-alias": "^2.2.2",
     "ncp": "^2.0.0",
@@ -65,7 +65,7 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 './test/it/**/*.spec.js'",
+    "test:it": "mocha -r ./test/util/version-alias.js --no-timeouts --parallel --jobs 15 './test/it/**/*.spec.js'",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
