--- a/packages/snippets/package.json
+++ b/packages/snippets/package.json
@@ -5,14 +5,20 @@
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "lint": "eslint '**/*.js'",
-    "test": "mocha --no-timeouts --parallel --jobs 15 ./test/*.spec.js",
+    "test": "mocha --no-timeouts --require test/util/hook.js ./test/*.spec.js",
+    "test:chrome": "mocha --no-timeouts --parallel --jobs 15 ./test/*.spec.js",
     "build": "node ./rollup/cli bundle --format json --format snippet",
-    "build:watch": "node ./rollup/cli watch --format json --format snippet"
+    "build:watch": "node ./rollup/cli watch --format json --format snippet",
+    "preversion": "bongo preversion && yarn build && yarn test",
+    "version": "bongo version",
+    "postversion": "bongo postversion --skip-release-notification"
   },
   "engines": {
     "node": ">=8.9.0"
   },
+  "dependencies": {},
   "devDependencies": {
+    "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-shared": "^0.1.0",
     "@babel/preset-env": "^7.10.2",
     "@rollup/plugin-babel": "^5.0.3",
