--- a/packages/snippets/package.json
+++ b/packages/snippets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/snippets",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "./dist/index.js",
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
@@ -30,7 +30,7 @@
     "rollup": "^2.16.1",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-terser": "^6.1.0",
-    "yargs": "^15.3.1",
-    "webdriverio": "^6.1.24"
+    "webdriverio": "^6.1.24",
+    "yargs": "^15.3.1"
   }
 }
