--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
+    "test:debug": "yarn test:it:debug",
     "test:it": "testcafe chrome:headless ./test/it/*.spec.js",
+    "test:it:debug": "testcafe --inspect-brk chrome:headless ./test/it/*.spec.js",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
