--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -37,7 +37,8 @@
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@applitools/eyes-sdk-core": "12.1.2",
-    "@applitools/visual-grid-client": "14.7.3"
+    "@applitools/visual-grid-client": "14.7.3",
+    "rimraf": "^3.0.2"
   },
   "peerDependencies": {
     "testcafe": "^1.9.0"
