--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -33,6 +33,7 @@
   "typings": "./typings/index.d.ts",
   "dependencies": {
     "@applitools/dom-capture": "7.2.6",
+    "@applitools/dom-snapshot": "4.0.5",
     "@applitools/isomorphic-fetch": "3.0.0",
     "@applitools/snippets": "1.0.3",
     "axios": "0.19.2",
